fix weird gaps

--- a/gameStyle.css
+++ b/gameStyle.css
@@ -31,8 +31,11 @@ body {
     color: white; 
     text-align: center;
     padding: 0.2rem;
-    width: 100%;
+    width: 100vw;
     box-sizing: border-box;
     margin: 0;
+    position: relative;
+    left: 0;
+    top: 0;
 }
   
